Implement bird watching pipeline: frame extraction, bird detection, species classification, counting, and visualization

--- a/birdWatcher.ipynb
+++ b/birdWatcher.ipynb
@@ -4,19 +4,284 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is a program that takes vdeo and count the type and number of birds at time intervals in video."
+    "# 1. Frame Extraction\n",
+    "Extract frames from the input video at a configurable interval (e.g., one frame per second)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "\n",
+    "def extract_frames(video_path, output_folder, interval_sec=1):\n",
+    "    \"\"\"Extract frames from a video file at the given interval in seconds.\"\"\"\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    "\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    frame_interval = int(fps * interval_sec)\n",
+    "    frame_count = 0\n",
+    "    saved_count = 0\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        # Save frame if at the interval\n",
+    "        if frame_count % frame_interval == 0:\n",
+    "            frame_filename = os.path.join(output_folder, f\"frame_{saved_count:05d}.jpg\")\n",
+    "            cv2.imwrite(frame_filename, frame)\n",
+    "            saved_count += 1\n",
+    "        frame_count += 1\n",
+    "\n",
+    "    cap.release()\n",
+    "    print(f\"Extracted {saved_count} frames from {video_path}\")\n",
+    "\n",
+    "# Example usage:\n",
+    "# extract_frames('data/bird_timelapse.mp4', 'output/frames', interval_sec=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Bird Detection\n",
+    "Use a pre-trained object detection model (e.g., YOLOv8) to locate birds in each frame. In this example, we use the Ultralytics YOLO implementation.\n",
+    "\n",
+    "python\n",
+    "Copy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "import cv2\n",
+    "\n",
+    "def detect_birds_in_frame(frame_path, model, conf_threshold=0.5):\n",
+    "    \"\"\"\n",
+    "    Detect birds in a frame using YOLO.\n",
+    "    Returns list of bounding boxes with the format: [x1, y1, x2, y2]\n",
+    "    \"\"\"\n",
+    "    frame = cv2.imread(frame_path)\n",
+    "    results = model(frame)\n",
+    "    detections = []\n",
+    "\n",
+    "    # Loop through detected objects in the first result\n",
+    "    for result in results:\n",
+    "        # Assume that the model is trained/detected for birds and filter by confidence.\n",
+    "        if result.conf[0] >= conf_threshold:\n",
+    "            x1, y1, x2, y2 = map(int, result.xyxy[0])\n",
+    "            detections.append((x1, y1, x2, y2))\n",
+    "    return detections\n",
+    "\n",
+    "# Load YOLOv8 model (customize model path if needed)\n",
+    "# model = YOLO(\"yolov8_birds.pt\")\n",
+    "# Example usage:\n",
+    "# boxes = detect_birds_in_frame('output/frames/frame_00001.jpg', model)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Species Classification\n",
+    "Crop the detected regions and classify each bird using a deep learning classification model (TensorFlow or PyTorch). Below is an example using TensorFlow/Keras:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# Assume you have a mapping from model output indices to species names\n",
+    "SPECIES_LABELS = {0: 'Sparrow', 1: 'Robin', 2: 'Blue Jay'}\n",
+    "\n",
+    "def preprocess_crop(crop, target_size=(224, 224)):\n",
+    "    \"\"\"Resize and normalize the image crop.\"\"\"\n",
+    "    crop_resized = cv2.resize(crop, target_size)\n",
+    "    crop_normalized = crop_resized.astype(\"float32\") / 255.0\n",
+    "    # Expand dimensions to match model input: (1, height, width, channels)\n",
+    "    return np.expand_dims(crop_normalized, axis=0)\n",
+    "\n",
+    "def classify_bird(cropped_img, model):\n",
+    "    \"\"\"\n",
+    "    Classify the bird in the cropped image.\n",
+    "    Returns the species name.\n",
+    "    \"\"\"\n",
+    "    preprocessed_img = preprocess_crop(cropped_img)\n",
+    "    predictions = model.predict(preprocessed_img)\n",
+    "    species_index = np.argmax(predictions, axis=1)[0]\n",
+    "    species_name = SPECIES_LABELS.get(species_index, \"Unknown\")\n",
+    "    return species_name\n",
+    "\n",
+    "# Example usage:\n",
+    "# classification_model = tf.keras.models.load_model('models/bird_classifier.h5')\n",
+    "# crop = frame[y1:y2, x1:x2]\n",
+    "# species = classify_bird(crop, classification_model)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Counting & Data Storage\n",
+    "Keep track of detected and classified birds, avoid duplicate counts across frames (if necessary by implementing a simple tracking mechanism), and store results in a structured format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "def update_species_counts(counts_dict, timestamp, species):\n",
+    "    \"\"\"\n",
+    "    Update the count of species at the given timestamp.\n",
+    "    counts_dict should be a list of dicts.\n",
+    "    \"\"\"\n",
+    "    counts_dict.append({\n",
+    "        'timestamp': timestamp,\n",
+    "        'species': species,\n",
+    "        'count': 1  # For each detected instance; you can later aggregate per frame\n",
+    "    })\n",
+    "\n",
+    "def save_counts_to_csv(data, output_csv):\n",
+    "    df = pd.DataFrame(data)\n",
+    "    df.to_csv(output_csv, index=False)\n",
+    "    print(f\"Species counts saved to {output_csv}\")\n",
+    "\n",
+    "# Example usage:\n",
+    "# species_counts = []\n",
+    "# update_species_counts(species_counts, \"00:00:05\", \"Sparrow\")\n",
+    "# save_counts_to_csv(species_counts, \"output/species_counts.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Visualization\n",
+    "Generate a time-series plot showing species counts over time using Matplotlib or Plotly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "def plot_species_counts(csv_file):\n",
+    "    df = pd.read_csv(csv_file)\n",
+    "    # Convert timestamp to a datetime object if necessary\n",
+    "    # For this example, assume the 'timestamp' column is in seconds.\n",
+    "    df['timestamp'] = pd.to_timedelta(df['timestamp'].astype(float), unit='s')\n",
+    "    \n",
+    "    # Pivot the dataframe to have timestamps as index and species as columns\n",
+    "    pivot_df = df.pivot_table(index='timestamp', columns='species', values='count', aggfunc='sum').fillna(0)\n",
+    "    \n",
+    "    pivot_df.plot(figsize=(10, 6))\n",
+    "    plt.xlabel('Time')\n",
+    "    plt.ylabel('Count')\n",
+    "    plt.title('Bird Species Count Over Time')\n",
+    "    plt.legend(title='Species')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage:\n",
+    "# plot_species_counts(\"output/species_counts.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Orchestrating the Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    video_path = 'data/bird_timelapse.mp4'\n",
+    "    frames_folder = 'output/frames'\n",
+    "    counts_csv = 'output/species_counts.csv'\n",
+    "    extraction_interval = 1  # in seconds\n",
+    "    \n",
+    "    # Step 1: Extract frames from video\n",
+    "    extract_frames(video_path, frames_folder, extraction_interval)\n",
+    "    \n",
+    "    # Load your models\n",
+    "    detection_model = YOLO(\"yolov8_birds.pt\")\n",
+    "    classification_model = tf.keras.models.load_model('models/bird_classifier.h5')\n",
+    "    \n",
+    "    species_counts = []\n",
+    "    \n",
+    "    # Process each extracted frame\n",
+    "    import glob\n",
+    "    frame_files = sorted(glob.glob(f\"{frames_folder}/*.jpg\"))\n",
+    "    \n",
+    "    for i, frame_file in enumerate(frame_files):\n",
+    "        timestamp = i * extraction_interval  # seconds elapsed\n",
+    "        \n",
+    "        # Step 2: Detect birds in the frame\n",
+    "        boxes = detect_birds_in_frame(frame_file, detection_model)\n",
+    "        frame = cv2.imread(frame_file)\n",
+    "        \n",
+    "        # Process each detected bird\n",
+    "        for box in boxes:\n",
+    "            x1, y1, x2, y2 = box\n",
+    "            cropped_bird = frame[y1:y2, x1:x2]\n",
+    "            \n",
+    "            # Step 3: Classify the bird species\n",
+    "            species = classify_bird(cropped_bird, classification_model)\n",
+    "            \n",
+    "            # Step 4: Update count data\n",
+    "            update_species_counts(species_counts, timestamp, species)\n",
+    "            \n",
+    "            # Optional: Draw bounding box and species label on the frame for visualization\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "            cv2.putText(frame, species, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                        0.5, (0, 255, 0), 2)\n",
+    "        \n",
+    "        # Optionally save the annotated frame\n",
+    "        annotated_folder = 'output/annotated_frames'\n",
+    "        if not os.path.exists(annotated_folder):\n",
+    "            os.makedirs(annotated_folder)\n",
+    "        annotated_path = os.path.join(annotated_folder, os.path.basename(frame_file))\n",
+    "        cv2.imwrite(annotated_path, frame)\n",
+    "    \n",
+    "    # Step 4: Save counts to CSV\n",
+    "    save_counts_to_csv(species_counts, counts_csv)\n",
+    "    \n",
+    "    # Step 5: Visualize the results\n",
+    "    plot_species_counts(counts_csv)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
